kubernetes/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: webapp
