kubernetes/webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: webapp
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 80
  - host: dorknet.org
    http:
      paths:
      - path: /
        backend:
          serviceName: webapp
          servicePort: 80
